--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ build/
 
 ### Mac OS ###
 .DS_Store
+/src/test/java/org/example/AppTest.java
+/.idea/dbnavigator.xml
+/.idea/encodings.xml
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/.gitignore
