--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.sawors</groupId>
-  <artifactId>WerewolfClassicRoles</artifactId>
-  <version>1.0</version>
+  <artifactId>werewolfclassic</artifactId>
+  <version>0.1</version>
 
-  <name>WerewolfClassicRoles</name>
+  <name>Werewolf Classic Roles</name>
   <description>A simple WerewolfGame extension.</description>
   <url>https://github.com/Sawors/WerewolfGame-ClassicRoles</url>
 
