--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,17 @@
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.sawors</groupId>
+      <artifactId>werewolfgame</artifactId>
+      <version>0.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>io.github.sawors</groupId>
+          <artifactId>werewolfgame</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 
   <build>
