--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>io.github.sawors</groupId>
       <artifactId>WerewolfGame</artifactId>
-      <version>0.2</version>
+      <version>0.2-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
